Accomadate author field for uploaded articles

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SESSION_SECRET = secret
 google_scope = https://www.googleapis.com/auth/documents.readonly
 google_client_id = 839282079367-35512ek0s5ih909c7up8a07jf12bahks.apps.googleusercontent.com
-S3_KEY_ID = AKIAWRPN4IZICZXBXIVZ
-S3_TOKEN = t2I4jVk5Zy5VGAuenFov41R3u9U3fyviM2eC8trN
+S3_KEY_ID = AKIAWRPN4IZIKCZY7WZI
+S3_TOKEN = LNaE1UCZ6n9DTBRiYH080i6z8+YJD6r+ZD8L+rlq
 S3_BUCKET_NAME = therhetoricalgazebo-media
